--- a/src/main/resources/assets/minecraft/fdpclient/translations/source.properties
+++ b/src/main/resources/assets/minecraft/fdpclient/translations/source.properties
@@ -115,6 +115,9 @@ module.AntiFireBall.description=Hits fireballs so you dont receive damage.
 module.AntiStuck.name=AntiStuck
 module.AntiStuck.description=automatic freeze you when setback
 
+module.AntiStaff.name=AntiStaff
+module.AntiStaff.description=Detect online customer service in the same office
+
 module.AntiVanish.name=AntiVanish
 module.AntiVanish.description=Shows who is vanished.
 
@@ -250,6 +253,9 @@ module.FastUse.description=Allows you to use items faster
 
 module.Fly.name=Fly
 module.Fly.description=Allows you to fly in survival mode
+
+module.Glide.name=Glide
+module.Glide.description=Allows you to glide in survival mode
 
 module.FreeCam.name=FreeCam
 module.FreeCam.description=Allows you to move out of your body
@@ -475,3 +481,6 @@ module.SilentDisconnect.description=Don't display GuiDisconnect when you disconn
 
 module.Performance.name=Performance
 module.Performance.description=Make the game faster
+
+module.Glide.name=Glide
+module.Glide.description=Glides fly
